# android.mk-inner-library-sample

./: .gitignore
hello-jni/app/: build.gradle  proguard-rules.pro
hello-jni/app/src/main/cpp/: CMakeLists.txt  hello-jni.c
hello-jni/app/src/main/cpp/inc/: wrapper-library.h
hello-jni/app/src/main/cpp/src/: hello-jni.c  hello-static.c
hello-jni/app/src/main/java/com/example/hellojni/: HelloJni.java
inner-library/: projbld
inner-library/jni/: Android.mk  Application.mk
inner-library/src/: inner-library.c  inner-library.h
wrapper-library/: projbld
wrapper-library/inc/: wrapper-library.h
wrapper-library/jni/: Android.mk  Application.mk
wrapper-library/src/: wrapper-library.c
